--- a/app/src/main/res/layout/activity_clientes.xml
+++ b/app/src/main/res/layout/activity_clientes.xml
@@ -50,6 +50,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="15dp"
+            android:paddingTop="8dp"
             android:id="@+id/cl_buttons">
 
             <Button
