--- a/app/src/main/res/layout/fragment_pedidos_finalizados.xml
+++ b/app/src/main/res/layout/fragment_pedidos_finalizados.xml
@@ -1,51 +1,44 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/pind_background"
-    android:orientation="vertical"
-    tools:context=".screens.home.HomeFragment">
+    android:background="@color/pind_background">
 
     <TextView
-        android:id="@+id/title"
-        android:layout_width="0dp"
+        android:id="@+id/tv_pedidos_finalizados"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:paddingVertical="5dp"
-        android:text="Pedidos"
+        android:text="@string/pedidos_finalizados"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/lista_pedidos"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/background_estoque_list"
         android:paddingTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        app:layout_constraintVertical_bias="1">
+        app:layout_constraintTop_toBottomOf="@+id/tv_pedidos_finalizados"
+        tools:layout_editor_absoluteX="5dp">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_pedidos"
+            android:id="@+id/rv_pedidos_finalizados"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:background="@color/white"
             android:clipToPadding="false"
             android:paddingBottom="30dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:itemCount="8"
-            tools:layout_editor_absoluteX="1dp"
-            tools:listitem="@layout/layout_pedidos_list_item" />
+            tools:listitem="@layout/layout_vendas_list_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
