--- a/app/src/main/res/layout/layout_popup_clientes.xml
+++ b/app/src/main/res/layout/layout_popup_clientes.xml
@@ -8,6 +8,13 @@
     android:orientation="vertical"
     android:padding="10dp">
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_fechar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_close"
+        android:layout_gravity="end"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
