--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="off_white">#F8F8F8</color>
     <color name="pind_green">#009639</color>
     <color name="pind_background">#50966A</color>
     <color name="pind_red">#960000</color>
