--- a/app/src/main/res/layout/layout_popup_estoque.xml
+++ b/app/src/main/res/layout/layout_popup_estoque.xml
@@ -54,7 +54,50 @@
             android:layout_marginHorizontal="5dp" />
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Preco:"
+            android:textStyle="bold"
+            android:paddingStart="10dp"
+            android:textSize="15sp">
+
+        </TextView>
+
+        <EditText
+            android:id="@+id/price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Unidade de medida:"
+            android:textStyle="bold"
+            android:paddingStart="10dp"
+            android:textSize="15sp">
+
+        </TextView>
+
+        <EditText
+            android:id="@+id/unit_measurement"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp" />
+
+    </LinearLayout>
     <Button
         android:id="@+id/btn_add_product"
         android:layout_width="wrap_content"
